--- a/aws-service-dev.properties
+++ b/aws-service-dev.properties
@@ -1,3 +1,3 @@
 aws-service.region-name=ap-south-1
 aws-service.instance-type=t3.medium
-aws-service.db-engine=postgresql
+aws-service.db-engine=aurora-postgresql
